--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -3,7 +3,7 @@
   <view class="about-item">
 
     <view class="item-left">
-      <label>项目名称: </label>
+      <label>软件名称: </label>
        <text>{{shopInfo.name}}</text> 
     </view>
 
@@ -11,7 +11,7 @@
 
   <view class="about-item">
     <view class="item-left">
-      <label>项目地址: </label>
+      <label>联系地址: </label>
        <text>{{shopInfo.address}}</text> 
     </view>
 
@@ -22,21 +22,11 @@
 
   <view class="about-item">
     <view class="item-left">
-      <label>电话号码:    </label>
+      <label>联系电话:    </label>
        <text>{{shopInfo.linkPhone}}</text> 
     </view>
     <view class="item-right" bindtap="callPhone">
       <image src="/static/images/telephone.png" class="right-icon"></image>
-    </view>
-  </view>
-
-  <view class="about-item">
-    <view class="item-left">
-      <label>litemall交流群: </label>
-       <text>{{shopInfo.qqNumber}}</text> 
-    </view>
-    <view class="item-right">
-      <image src="/static/images/mobile.png" class="right-icon"></image>
     </view>
   </view>
 
