--- a/pages/jc/index/index.wxml
+++ b/pages/jc/index/index.wxml
@@ -5,8 +5,8 @@
   <!--顶部banner-->
   <swiper class="banner" indicator-dots="true" autoplay="true" interval="3000" duration="1000">
     <swiper-item wx:for="{{banner}}" wx:key="id">
-      <navigator url="/pages/building/building?id=12">
-      <image src="{{item.url}}" background-size="cover"></image>
+      <navigator url="/pages/jc/adDetails/index?adid={{item.id}}">
+      <image src="{{item.picUrl}}" mode="scaleToFill"></image>
       </navigator>
     </swiper-item>
   </swiper>
