--- a/pages/ucenter/index/index.wxml
+++ b/pages/ucenter/index/index.wxml
@@ -13,8 +13,8 @@
       <view class='user_row_left'>检测订单</view>
     </view>
     <view class='user_column'>
-      <view class='user_column_item' bindtap='goOrderIndex' data-index='1' data-route='/pages/ucenter/order/order'>
-        <text class="user_column_item_badge" wx:if="{{order.unpaid != 0}}">{{order.unpaid}}</text>
+      <view class='user_column_item' bindtap='goOrderIndex' data-index='1' data-route='/pages/ucenter/orderJc/order'>
+        <text class="user_column_item_badge">12</text>
         <image class='user_column_item_image' src='/static/images/pendpay.png'>
         </image>
         <view class='user_column_item_text'>待付款</view>
@@ -43,28 +43,32 @@
     <view class='user_row_left'>商品订单</view>
   </view>
   <view class='user_column'>
-
-    <view class='user_column_item' bindtap='goCoupon'>
-      <image class='user_column_item_image' src='/static/images/coupon.png'></image>
-      <view class='user_column_item_text'>待付款</view>
-    </view>
-    <view class='user_column_item' bindtap='goCollect'>
-      <image class='user_column_item_image' src='/static/images/icon_collect.png'></image>
-      <view class='user_column_item_text'>待发货</view>
-    </view>
-    <view class='user_column_item' bindtap='goFootprint'>
-      <image class='user_column_item_image' src='/static/images/footprint.png'></image>
-      <view class='user_column_item_text'>待签收</view>
-    </view>
-    <view class='user_column_item' bindtap='goGroupon'>
-      <image class='user_column_item_image' src='/static/images/group.png'></image>
-      <view class='user_column_item_text'>已完成</view>
-    </view>
+    <view class='user_column_item' bindtap='goOrderIndex' data-index='1' data-route='/pages/ucenter/order/order'>
+        <text class="user_column_item_badge">12</text>
+        <image class='user_column_item_image' src='/static/images/pendpay.png'>
+        </image>
+        <view class='user_column_item_text'>待付款</view>
+      </view>
+      <view class='user_column_item' bindtap='goOrderIndex' data-index='2' data-route='/pages/ucenter/order/order'>
+        <text class="user_column_item_badge" wx:if="{{order.unship != 0}}">{{order.unship}}</text>
+        <image class='user_column_item_image' src='/static/images/send.png'></image>
+        <view class='user_column_item_text'>待发货</view>
+      </view>
+      <view class='user_column_item' bindtap='goOrderIndex' data-index='3' data-route='/pages/ucenter/order/order'>
+        <text class="user_column_item_badge" wx:if="{{order.unrecv != 0}}">{{order.unrecv}}</text>
+        <image class='user_column_item_image' src='/static/images/receive.png'></image>
+        <view class='user_column_item_text'>待签收</view>
+      </view>
+      <view class='user_column_item' bindtap='goOrderIndex' data-index='4' data-route='/pages/ucenter/order/order'>
+        <text class="user_column_item_badge" wx:if="{{order.uncomment != 0}}">{{order.uncomment}}</text>
+        <image class='user_column_item_image' src='/static/images/comment.png'></image>
+        <view class='user_column_item_text'>已完成</view>
+      </view>
   </view>
   <view class='separate'></view>
 
   <view class='user_row'>
-    <view class='user_row_left'>必备工具</view>
+    <view class='user_row_left'>服务设置</view>
   </view>
   <view class='user_column'>
     <view class='user_column_item' bindtap='goAddress'>
@@ -73,7 +77,7 @@
     </view>
     <button class="user_column_item_phone" open-type="getPhoneNumber" bindgetphonenumber="bindPhoneNumber">
       <image class='user_column_item_image' src='/static/images/mobile.png'></image>
-      <view class='user_column_item_text'>绑定手机</view>
+      <view class='user_column_item_text' style="bottom:0rpx;">绑定手机</view>
     </button>
     <view class='user_column_item' bindtap='goFeedback'>
       <image class='user_column_item_image' src='/static/images/feedback.png'></image>
@@ -91,5 +95,5 @@
     </view>
   </view>
 
-  <view class="logout" wx:if="{{hasLogin}}" bindtap="exitLogin">退出登录</view>
+  <!-- <view class="logout" wx:if="{{hasLogin}}" bindtap="exitLogin">退出登录</view> -->
 </view>
